--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Install qemu-system
+        run: |
+          sudo apt-get update
+          sudo apt-get install jq qemu-system
+
       # fix backwards incompatibilities in template
       - name: Fix Template
         uses: hashicorp/packer-github-actions@master
