--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -23,6 +23,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq qemu-system qemu qemu-kvm qemu-system-data qemu-system-misc qemu-system-x86-64 qemu-system-x86 qemu-system-i386
 
+      # https://github.com/hashicorp/packer/issues/10892
+      - name: fix qemu-system-x86_64 link
+        run: |
+          hash qemu-kvm
+          hash qemu-system-x86_64
+          hash qemu-system-i386
+          hash
+          ln -s /usr/libexec/qemu-kvm /usr/local/bin/qemu-system-x86_64
+
       # fix backwards incompatibilities in template
       - name: Fix Template
         uses: hashicorp/packer-github-actions@master
