--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install qemu-system
         run: |
           sudo apt-get update
-          sudo apt-get install jq qemu-system qemu qemu-kvm qemu-system-data qemu-system-misc qemu-system-x86-64 qemu-system-x86 qemu-system-i386
+          sudo apt-get install jq $(apt-cache search qemu | grep -E '^qemu' | cut -d ' ' -f1 | tr '\r\n' ' ' )
 
       # https://github.com/hashicorp/packer/issues/10892
       - name: fix qemu-system-x86_64 link
