--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
       -
         name: Runner info
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y hwinfo
           sudo hwinfo --short
@@ -34,6 +35,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install qemu-system
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install jq $(apt-cache search qemu | grep -E '^qemu' | grep -v -E 'qemu-system-x86-xen|qemu-user-binfmt' | cut -d ' ' -f1 | tr '\r\n' ' ' )
