--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, ubuntu-18.04]
+        os: [macos-latest, macos-10.15, ubuntu-latest, ubuntu-18.04]
         experimental: [false]
         include:
           - os: ubuntu-latest
