--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -50,8 +50,8 @@ jobs:
           hash ||:
           ln -s --verbose /usr/libexec/qemu-kvm /usr/local/bin/qemu-system-x86_64 ||:
           ln -s --verbose /usr/bin/qemu-system-x86_64 /usr/local/bin/qemu-system-x86_64 ||:
-          cd /usr && sudo ln -s --verbose /usr/bin/qemu* . ||:
-          cd /usr && sudo ln -s --verbose /usr/local/bin/qemu* . ||:
+          sudo ln -s -v /usr/local/bin/qemu* /bin ||:
+          sudo ln -s -v /usr/bin/qemu* /bin ||:
 
       # fix backwards incompatibilities in template
       - name: Fix Template
@@ -73,10 +73,11 @@ jobs:
 
       # build artifact
       - name: Build Artifact
+        if: runner.os == 'Linux'
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
-          arguments: "-color=false -on-error=abort"
+          arguments: "-debug -color=false -on-error=abort"
           #target: packer.pkr.hcl
           target: "*.json"
         env:
