--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -84,6 +84,7 @@ jobs:
         #if: runner.os == 'Linux'
         #uses: hashicorp/packer-github-actions@master
         run: |
+          cd ${GITHUB_WORKSPACE} || find . -type f -name "*" -ls
           export PACKER_LOG=1
           packer build -debug -parallel-builds=1 -color=false -on-error=abort "*.json"
           #target: packer.pkr.hcl
