--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -31,6 +31,11 @@ jobs:
           sudo hwinfo --short
           sudo mount
 
+      - name: Runner info / find . -ls
+        if: runner.os == 'Linux'
+        run: |
+          find . -type f -name "*" -ls
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
